--- a/src/components/Homepages/About/about.css
+++ b/src/components/Homepages/About/about.css
@@ -9,7 +9,7 @@
 }
 
 .about-info p{
-    text-align: center;
+    text-align: justify;
     font-size: 16px;
     color: gainsboro;
     line-height: 1.2;
