--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+
+
 * {
   margin: 0;
   padding: 0;
@@ -6,6 +9,7 @@
 
 body{
   background-color: #1C1C1C;
+  font-family: Helvetica;
 }
 
 .main-container,
