--- a/src/components/Homepages/Techstack/loop.css
+++ b/src/components/Homepages/Techstack/loop.css
@@ -1,4 +1,6 @@
 /* scroll.css */
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+
 
 .scroll-container {
     width: 100%;
@@ -9,8 +11,9 @@
   .scroll-container h4{
     color: #fff;
     text-align: center;
-    margin-bottom: 10px;
-   
+    margin: 10px 0;
+   font-family: Arial, Helvetica, sans-serif;
+   letter-spacing: 1px;
 
   }
   
